--- a/views/index.jade
+++ b/views/index.jade
@@ -1,3 +1,22 @@
 //
    Created by ben.nelson on 2/14/14.
 
+doctype html
+html(lang="en")
+    head
+        title= pageTitle
+        script(type='text/javascript').
+          if (foo) {
+             bar(1 + 5)
+          }
+    body
+        h1 Jade - node template engine
+        #container.col
+            if youAreUsingJade
+                p You are amazing
+            else
+                p Get on it
+            p.
+              Jade is a terse and simple
+              templating language with a
+                this is a test
