--- a/views/index.jade
+++ b/views/index.jade
@@ -4,11 +4,8 @@
 doctype html
 html(lang="en")
     head
-        title= pageTitle
-        script(type='text/javascript').
-          if (foo) {
-             bar(1 + 5)
-          }
+        title= "Ticket Picker"
+        script(type='text/javascript')
     body
         h1 Jade - node template engine
         #container.col
