--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,8 @@ doctype html
 html(lang="en")
     head
         title= "Ticket Picker"
-        script(type='text/javascript')
+        script(type='text/javascript', src='../scripts/viewmodel/baseUI.js')
+        link(rel='stylesheet', href='style/base.css')
     body
         h1 Jade - node template engine
         #container.col
