adding in libraries, quit button
adding in the bootstrap and jquery libraries, adding in a button that
has quit functionality on click

--- a/views/style/base.css
+++ b/views/style/base.css
@@ -2,3 +2,12 @@ body{
     -webkit-app-region: drag;
     font-family: sans-serif;
 }
+
+button{
+    -webkit-app-region: no-drag; /*so you can't drag buttons*/
+}
+
+.unselectable{
+    -webkit-user-select: none;
+    -webkit-app-region: drag;
+}
