--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,4 @@
 <!--Created by ben.nelson on 2/14/14.
---><!DOCTYPE html><html lang="en"><head><title>Ticket Picker</title><script type="text/javascript" src="../scripts/viewmodel/baseUI.js"></script><link rel="stylesheet" href="style/base.css"></head><body><h1>Jade - node template engine</h1><div id="container" class="col"><p>Get on it</p><p>Jade is a terse and simple
+--><!DOCTYPE html><html lang="en"><head><title>Ticket Picker</title><script type="text/javascript" src="../lib/jquery-2.1.0.js"></script><link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.css"><script rel="stylesheet" src="../lib/bootstrap/js/bootstrap.js"></script><script type="text/javascript" src="../scripts/viewmodel/baseUI.js"></script><link rel="stylesheet" href="style/base.css"></head><body class="unselectable"><div class="col-xs-12"><div class="col-xs-8"><h1>Jade - node template engine</h1></div><div class="col-xs-4"><button type="button" aria-hidden="true" onclick="quit()" class="close">&times</button></div></div><div id="container" class="col"><p>Get on it</p><p>Jade is a terse and simple
 templating language with a
   this is a test</p></div></body></html>
