--- a/views/index.jade
+++ b/views/index.jade
@@ -5,10 +5,17 @@ doctype html
 html(lang="en")
     head
         title= "Ticket Picker"
+        script(type='text/javascript', src='../lib/jquery-2.1.0.js')
+        link(rel='stylesheet', href='../lib/bootstrap/css/bootstrap.css')
+        script(rel='stylesheet', src='../lib/bootstrap/js/bootstrap.js')
         script(type='text/javascript', src='../scripts/viewmodel/baseUI.js')
         link(rel='stylesheet', href='style/base.css')
-    body
-        h1 Jade - node template engine
+    body.unselectable
+       div.col-xs-12
+           div.col-xs-8
+            h1 Jade - node template engine
+           div.col-xs-4
+            button(type='button', class='close', aria-hidden='true', onclick='quit()').&times
         #container.col
             if youAreUsingJade
                 p You are amazing
