--- a/views/index.jade
+++ b/views/index.jade
@@ -31,5 +31,5 @@ html(lang="en", ng-app="ticketpicker")
                 input(type="text", ng-model="lastWin", placeholder="Last Win")
                 button(ng-disabled="!userInput.name.$valid" ng-click="addUser({ name: name, lastWin: lastWin })", class="btn btn-primary") Add User
                 p
-                    small(ng-show="!userInput.name.$valid") Name for the user is required.
+                    small(ng-show="!userInput.name.$valid") {{ errorMessage }}
 
