--- a/views/index.jade
+++ b/views/index.jade
@@ -11,6 +11,7 @@ html(lang="en", ng-app="ticketpicker")
         script(type='text/javascript', src='../app/bower_components/angular-resource/angular-resource.js')
         script(type='text/javascript', src='../scripts/app.js')
         script(type='text/javascript', src='../scripts/services/database.js')
+        script(type='text/javascript', src='../scripts/services/dateService.js')
         script(type='text/javascript', src='../scripts/controllers/controllers.js')
         link(rel='stylesheet', href='style/base.css')
         link(rel='stylesheet', href='../app/bower_components/bootstrap/dist/css/bootstrap.css')
@@ -31,5 +32,5 @@ html(lang="en", ng-app="ticketpicker")
                 input(type="text", ng-model="lastWin", placeholder="Last Win")
                 button(ng-disabled="!userInput.name.$valid" ng-click="addUser({ name: name, lastWin: lastWin })", class="btn btn-primary") Add User
                 p
-                    small(ng-show="!userInput.name.$valid") {{ errorMessage }}
+                    small(ng-show="errorMessage") {{ errorMessage }}
 
