--- a/views/index.jade
+++ b/views/index.jade
@@ -13,8 +13,14 @@ html(lang="en", ng-app="ticketpicker")
         script(type='text/javascript', src='../scripts/services/database.js')
         script(type='text/javascript', src='../scripts/services/dateService.js')
         script(type='text/javascript', src='../scripts/controllers/controllers.js')
-        link(rel='stylesheet', href='style/base.css')
+        link(rel='stylesheet', href='../views/style/base.css')
         link(rel='stylesheet', href='../app/bower_components/bootstrap/dist/css/bootstrap.css')
+       
+        script(type='text/ng-template', id='edit_form')
+          form(name="editUser")
+            input(type="text", name="name", ng-model="user.name", placeholder="Name")
+            input(type="text", ng-model="user.lastWin", placeholder="Last Win")
+          button(ng-click="$parent.editUser($index, { name: user.name, lastWin: user.lastWin })", class="btn") Save
     body.unselectable
        .row(ng-controller="main")
            div.col-xs-6
@@ -24,15 +30,17 @@ html(lang="en", ng-app="ticketpicker")
              .users.col-xs-12
               .user(ng-repeat='user in users')
                 .row
-                  .col-xs-12
-                      {{ user.name }} - {{ user.lastWin }}                
+                  .col-xs-12                    
+                      span(ng-if='!user.edit' ng-click="applyEdit($index)") {{ user.name }} - {{ user.lastWin }}                
                       button(ng-click="removeUser(user.name)", class="btn btn-danger pull-right margin-right-10") Remove User
+                      div(ng-include="'edit_form'", ng-if="user.edit")
+
 
            div.col-xs-6      
               .userManagement.row.col-xs-12
                 form(name="userInput")
                     input(type="text", name="name", ng-model="name", placeholder="Name", class="form-control" required)
-                    input(type="text", ng-model="lastWin", placeholder="Last Win", class="form-control pull")
+                    input(type="text", ng-model="lastWin", placeholder="Last Win", class="form-control")
               .row.col-xs-12
                     button(ng-disabled="!userInput.name.$valid" ng-click="addUser({ name: name, lastWin: lastWin })", class="btn btn-primary pull-right margin-right-10") Add User
                     p
