--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@ Created by ben.nelson on 2/14/14.
           <div class="users col-xs-12">
             <div ng-repeat="user in users" class="user">
               <div class="row">
-                <div class="col-xs-12">                   <span ng-if="!user.edit" ng-click="applyEdit($index)">{{ user.name }} - {{ user.lastWin }}                </span>
+                <div class="col-xs-12">                   <span ng-if="!user.edit" ng-click="applyEdit($index)">{{ user.name }} {{ user.lastWin }}                </span>
                   <button ng-click="removeUser(user.name)" class="btn btn-danger pull-right margin-right-10">Remove User</button>
                   <div ng-include="'edit_form'" ng-if="user.edit"></div>
                 </div>
