--- a/views/index.jade
+++ b/views/index.jade
@@ -9,6 +9,7 @@ html(lang="en", ng-app="ticketpicker")
         script(type='text/javascript', src='../scripts/viewmodel/baseUI.js')
         script(type='text/javascript', src='../app/bower_components/angular/angular.js')
         script(type='text/javascript', src='../app/bower_components/angular-resource/angular-resource.js')
+        script(type='text/javascript', src='../app/bower_components/angular-sanitize/angular-sanitize.js')
         script(type='text/javascript', src='../scripts/app.js')
         script(type='text/javascript', src='../scripts/services/database.js')
         script(type='text/javascript', src='../scripts/services/dateService.js')
@@ -44,5 +45,5 @@ html(lang="en", ng-app="ticketpicker")
               .row.col-xs-12
                     button(ng-disabled="!userInput.name.$valid" ng-click="addUser({ name: name, lastWin: lastWin })", class="btn btn-primary pull-right margin-right-10") Add User
                     p
-                      small(ng-show="errorMessage") {{ errorMessage }}
+                      small(ng-show="errorMessage" ng-bind-html='errorMessage')
 
