allowing blank dates
thought i had fixed this previously?

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@ Created by ben.nelson on 2/14/14.
     <script type="text/javascript" src="../scripts/app.js"></script>
     <script type="text/javascript" src="../scripts/services/database.js"></script>
     <script type="text/javascript" src="../scripts/services/dateService.js"></script>
+	<script type="text/javascript" src="../scripts/services/randomPicker.js"></script>
     <script type="text/javascript" src="../scripts/controllers/controllers.js"></script>
     <link rel="stylesheet" href="../views/style/base.css">
     <link rel="stylesheet" href="../app/bower_components/bootstrap/dist/css/bootstrap.css">
