--- a/views/index.jade
+++ b/views/index.jade
@@ -13,6 +13,7 @@ html(lang="en", ng-app="ticketpicker")
         script(type='text/javascript', src='../scripts/app.js')
         script(type='text/javascript', src='../scripts/services/database.js')
         script(type='text/javascript', src='../scripts/services/dateService.js')
+        script(type='text/javascript', src='../scripts/services/randomPicker.js')
         script(type='text/javascript', src='../scripts/controllers/controllers.js')
         link(rel='stylesheet', href='../views/style/base.css')
         link(rel='stylesheet', href='../app/bower_components/bootstrap/dist/css/bootstrap.css')
