--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,6 @@
 
 <!--
-Created by ben.nelson on 2/14/14.
-
+<Created>by ben.nelson on 2/14/14.</Created>
 --><!DOCTYPE html>
 <html lang="en" ng-app="ticketpicker">
   <head>
@@ -13,7 +12,7 @@ Created by ben.nelson on 2/14/14.
     <script type="text/javascript" src="../scripts/app.js"></script>
     <script type="text/javascript" src="../scripts/services/database.js"></script>
     <script type="text/javascript" src="../scripts/services/dateService.js"></script>
-	<script type="text/javascript" src="../scripts/services/randomPicker.js"></script>
+    <script type="text/javascript" src="../scripts/services/randomPicker.js"></script>
     <script type="text/javascript" src="../scripts/controllers/controllers.js"></script>
     <link rel="stylesheet" href="../views/style/base.css">
     <link rel="stylesheet" href="../app/bower_components/bootstrap/dist/css/bootstrap.css">
